@@ -26,14 +26,7 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.16.0</version>
         </dependency>
-        
-        <!-- Google Cloud Storage -->
-        <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-storage</artifactId>
-            <version>2.28.0</version>
-        </dependency>
-        
+ 
         <!-- SLF4J and Logback for logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -55,7 +48,6 @@
                 <version>3.11.0</version>
                 <configuration>
                     <release>21</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
